Got a few bugs fixed added some new commands and bot reponse functionality. Now have a tweet command to send tweets. The stream API is setup as well but currently having issues stopping it using a --stop command parameter.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "node-xmpp-core": "^5.0.1",
     "request": "^2.69.0",
     "sleep": "^3.0.1",
-    "tls-connect": "^0.2.2"
+    "sleep-async": "^1.0.1",
+    "tls-connect": "^0.2.2",
+    "twitter": "^1.2.5"
   }
 }
